  some other type of argument.  If there is one such method, then the method 
  that takes in String as an argument is not selected by the Introspector.
  
* The pattern definition **/._* has been included into the Default 
  Excludes list.
  
* <propertyfile>'s <entry> element was modified to remove "never" as a value
  as its behavior was undocumented and flakey.


Fixed bugs:
-----------
* Ant works properly with the combination of Java1.4/WindowsXP

* Fixed bug where <java> used to sometimes invoke class constructors twice.

* Fixed bug with 4NT shell support

* Fixed bug where ant would not perform ftp without remotedir being
  specified even though this was not mandatory.

* Fixed bug where ant would not copy system properties into new Project
  in ant/antcall tasks when inheritall="false" is set.

* <propertyfile> would not close the original property file.

* <ant> will no longer override a subbuild's basedir with inheritall="true". 

* Fixed problem with the built-in <junit> formatters which assumed
  that only one test could be running at the same time - this is not
  necessarily true, see junit.extensions.ActiveTestSuite.

* <jar>'s whenEmpty attribute is useless as JARs are never empty, they
  contain at least a manifest file, therefore it will now print a
  warning and do nothing.

* <typedef> hasn't been all that useful as it couldn't be used outside
  of targets (it can now) and nested "unknown" elements have always
  been considered to be tasks (changed as well).

* <fixcrlf> would fail for files that contained lines longer than 8kB.

* Some junit formatters incorrectly assumed that all testcases would
  inherit from junit.framework.TestCase.

* <fixcrlf> dropped the first characters from Mac files.

Other changes:
--------------
* gzip now checks that the zipfile is older than the source file
  before rebuilding the zipfile. 

* New task <loadfile> to load a whole file into a property
